--- a/HTML/06_Portfoli.html
+++ b/HTML/06_Portfoli.html
@@ -1,36 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
 </head>
-<body>
-    <h1>Portfolio</h1>
-    <h1>Aditya Sisodiya</h3>
-    <img src="photo.jpg" alt="" height="200px">
 
-    <h2>Education</h2>
-    <ul>
-        <li>10 Class (CBSE) : 82%</li>
-        <li>12 Class (CBSE) : 73%</li>
-        <li>Btech CSE Engineering : 8.81</li>
-    </ul>
-    <h2>Skill</h2>
-    <ul>
-        <li>Full Stack</li>
-        <li>DSA in C++</li>
-        <li>Python Basic</li>
-    </ul>
-    <h2>Hobbies</h2>
-    <ul>
-        <li>Gaming</li>
-        <li>Traveling</li>
-    </ul>
-    <h2>Contact</h2>
-    <ul>
-        <li>Mobile No. : 1234567890</li>
-        <li>Email : adi@gmail.com</li>
-    </ul>
+<body>
+    <header>
+        <h1>Aditya Sisodiya</h3>
+            <img src="photo.jpg" alt="" height="200px">
+    </header>
+
+
+    <hr>
+    <section>
+        <h2>Education</h2>
+        <ul>
+            <li>10 Class (CBSE) : 82%</li>
+            <li>12 Class (CBSE) : 73%</li>
+            <li>Btech CSE Engineering : 8.81</li>
+        </ul>
+    </section>
+    <hr>
+    <section>
+        <h2>Skill</h2>
+        <ul>
+            <li>Full Stack</li>
+            <li>DSA in C++</li>
+            <li>Python Basic</li>
+        </ul>
+    </section>
+    <hr>
+    <section>
+        <h2>Hobbies</h2>
+        <ul>
+            <li>Gaming</li>
+            <li>Traveling</li>
+        </ul>
+    </section>
+    <hr>
+    <section>
+        <h2>Achievements</h2>
+        <ul>
+            <li>RHCSA Certified</li>
+        </ul>
+    </section>
+    <hr>
+    <section>
+        <h2>Contact</h2>
+        <ul>
+            <li>Mobile No. : 1234567890</li>
+            <li>Email : adi@gmail.com</li>
+        </ul>
+    </section>
+    <footer>Made with love with me</footer>
 </body>
+
 </html>
